# simple-crypt

./: .gitignore  ArgsHandler.cpp  ArgsHandler.h  ArgsParser.cpp  ArgsParser.h  Builder.cpp  Builder.h  CMakeLists.txt  README.md  SimpleCrypt.cpp  SimpleCrypt.h  TestData.txt  crypto.cpp  crypto.h  main.cpp
ArgumentHandler/: ArgsHandler.cpp  ArgsHandler.h
Builder/: Builder.cpp  Builder.h
Data/: UiText.h
Data/UI/: ErrorText.h  UiText.h
FileHandling/: FileHandler.cpp  FileHandler.h
Interfaces/: ICommands.h  IFileHandler.h  ILogger.h
Logger/: Logger.cpp  Logger.h
POD/: File.h
Render/: RenderCmd.cpp  RenderCmd.h
Tests/: TestMocks.h  test.cpp
commands/: CommandTypes.h  Commands.cpp  Commands.h
huffman/: BuildTree.h  CompareTree.h  INode.h  InternalNode.cpp  InternalNode.h  LeafNode.cpp  LeafNode.h  Tree.h
